force-app/main/default/objects/Integration_Log__c/fields/API_Config_Id__c.field-meta.xml
<CustomField>
    <fullName>API_Config_Id__c</fullName>
    <description>The API type for which the request is being logged.</description>
    <inlineHelpText>The API type for which the request is being logged.</inlineHelpText>
    <label>API Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>