force-app/main/default/objects/Integration_Log__c/fields/End_Date_And_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_And_Time__c</fullName>
    <description>The date and time when the response was received from the external system.</description>
    <inlineHelpText>The date and time when the response was received from the external system.</inlineHelpText>
    <label>End Date And Time</label>
    <type>DateTime</type>
</CustomField>