force-app/main/default/objects/Integration_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error message while processing the integration request. Could be an error response from the third party system or internal errors.</description>
    <inlineHelpText>Error message while processing the integration request</inlineHelpText>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>