force-app/main/default/objects/Integration_Log__c/fields/Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>Exception_Message__c</fullName>
    <description>Exception message if an internal exception has been thrown while processing the integration request or the response.</description>
    <inlineHelpText>Exception message if an internal exception has been thrown while processing the integration request or the response.</inlineHelpText>
    <label>Internal Exception Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>