force-app/main/default/objects/Integration_Log__c/fields/Processing_Time_Milliseconds__c.field-meta.xml
<CustomField>
    <fullName>Processing_Time_Milliseconds__c</fullName>
    <description>The roundtrip time taken to process the integration request.</description>
    <inlineHelpText>The roundtrip time taken to process the integration request</inlineHelpText>
    <label>Processing Time(Milliseconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>