force-app/main/default/objects/Integration_Log__c/fields/Request_Log__c.field-meta.xml
<CustomField>
    <fullName>Request_Log__c</fullName>
    <description>The request log for the third party request. Depends on what the adapter chooses to log.</description>
    <inlineHelpText>The request log for the third party request.</inlineHelpText>
    <label>Request Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>