force-app/main/default/objects/Integration_Log__c/fields/Response_Log__c.field-meta.xml
<CustomField>
    <fullName>Response_Log__c</fullName>
    <description>The response log for the third party response. Depends on what the adapter chooses to log.</description>
    <inlineHelpText>The response log for the third party response.</inlineHelpText>
    <label>Response Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>