force-app/main/default/objects/Integration_Log__c/fields/Start_Date_And_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_And_Time__c</fullName>
    <description>The date and time when the request was sent to the external system.</description>
    <inlineHelpText>The date and time when the request was sent to the external system.</inlineHelpText>
    <label>Start Date And Time</label>
    <type>DateTime</type>
</CustomField>