force-app/main/default/objects/Integration_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Processing status for the request sent to the third party system. Could be Success or Error.</description>
    <inlineHelpText>Processing status for the request sent to the third party system</inlineHelpText>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>