force-app/main/default/objects/Integration_Log__c/fields/Third_Party_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Error_Code__c</fullName>
    <description>The error code from the third party system.</description>
    <inlineHelpText>The error code from the third party system.</inlineHelpText>
    <label>Third Party Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>