force-app/main/default/objects/Integration_Log__c/fields/Third_Party_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Error_Message__c</fullName>
    <description>Error message from the third party service while processing the integration request.</description>
    <inlineHelpText>Error message from the third party service while processing the integration request.</inlineHelpText>
    <label>Third Party Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>