force-app/main/default/objects/Integration_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>API_Config_Id__c</columns>
    <columns>Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>